--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="#" class="header-menu__link">Events</a>
                 </li>
                 <li class="header-menu__item">
-                    <a href="#" class="header-menu__link"><Rodrigues/a>
+                    <a href="#" class="header-menu__link">Rodrigues</a>
                 </li>
             </nav>
             <!-- /.header-menu -->
