--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 
                     <span class="user__name">Nathan</span>
 
-
                 </a>
                 <!-- /.user -->
             </div>
             <!-- /.navbar-top -->
-            <nav class="navbar-menu">
+        </div>
+        <!-- /.container -->
+       <div class="navbar-bottom">
+        <div class="container">
+            <ul class="navbar-menu">
                 <li class="navbar-menu__item">
                     <a href="#" class="navbar-menu__link">All Deals</a>
                 </li>
@@ -56,11 +59,12 @@
                 <li class="navbar-menu__item">
                     <a href="#" class="navbar-menu__link">Rodrigues</a>
                 </li>
-            </nav>
+            </ul>
             <!-- /.navbar-menu -->
         </div>
         <!-- /.container -->
+       </div>
     </header>
-    <!-- /.navbar -->
+    
 </body>
 </html>
