--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </button>
                 </form>
 
-                <a href="#" class="user">
+                <a href="#" class="user navbar__user ">
                     <img src="img/user-avatar.jpg" 
                     alt="avatar: Nathan"
                     class="user__avatar"/>
@@ -31,6 +31,11 @@
 
                 </a>
                 <!-- /.user -->
+                <button class="menu-button navbar-top__menu-button">
+                    <span class="menu-button__line"></span>
+                    <span class="menu-button__line"></span>
+                    <span class="menu-button__line"></span>
+                </button>
             </div>
             <!-- /.navbar-top -->
         </div>
